--- a/index.html
+++ b/index.html
@@ -13,18 +13,35 @@
 		<h1>La Belette de la Chance</h1>
 	</header>
 	<div>
-		<div class="input-group mb-3">
-			<div class="input-group-prepend">
-				<span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
-			</div>
-			<div class="custom-file">
-				<input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
-				<label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+		<div class="container-fluid upload-container">
+			<div class="input-group mb-3">
+				<div class="input-group-prepend">
+					<span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
+				</div>
+				<div class="custom-file">
+					<input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
+					<label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+				</div>
 			</div>
 		</div>
 	</div>
 </body>
-<script src="cw.js"> </script>
+
+<!-- <style>
+	.header {
+		background-color: #e30b5d;
+		color: whitesmoke;
+	}
+</style> -->
+<script>
+	var cw = new Vue({
+		el: '#cw',
+		data: {
+			message: 'Chance Weasel'
+		}
+	})
+</script>
+<script src="cw.js"></script>
 <script src="ext/vue.js"></script>
 <script src="ext/jquery-3.5.1.min.js"></script>
 <script src="ext/popper.min.js"></script>
