--- a/index.html
+++ b/index.html
@@ -12,21 +12,120 @@
 	<header class="header">
 		<h1>La Belette de la Chance</h1>
 	</header>
-	<div>
-		<div class="input-group mb-3">
-			<div class="input-group-prepend">
-				<span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
+	<div id="cw">
+		<div class="container-fluid upload-container">
+			<div class="input-group mb-3">
+				<div class="input-group-prepend">
+					<span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
+				</div>
+				<div class="custom-file">
+					<input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01" @change="onFileChange">
+					<label class="custom-file-label" for="inputGroupFile01">{{fileInput}}</label>
+				</div>
 			</div>
-			<div class="custom-file">
-				<input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
-				<label class="custom-file-label" for="inputGroupFile01">Choose file</label>
-			</div>
+			<button type="button" class="btn btn-primary" v-on:click="tirage()">Tirage</button>
 		</div>
 	</div>
 </body>
-<script src="cw.js"> </script>
+
+<!-- <style>
+	.header {
+		background-color: #e30b5d;
+		color: whitesmoke;
+	}
+</style> -->
+<script src="cw.js"></script>
 <script src="ext/vue.js"></script>
 <script src="ext/jquery-3.5.1.min.js"></script>
+<script src="ext/lodash.js"></script>
 <script src="ext/popper.min.js"></script>
 <script src="ext/bootstrap.min.js"></script>
+<script>
+	var cw = new Vue({
+		el: '#cw',
+		data: {
+			finalTable: [],
+			fileInput: 'Choose file',
+			message: 'Chance Weasel'
+		},
+		mounted() {
+
+		},
+		methods: {
+			onFileChange(event) {
+
+				var files = event.target.files || event.dataTransfer.files
+				if (!files.length)
+					return
+				this.createInput(files[0])
+			},
+			createInput(file) {
+				// console.log(file)
+				this.fileInput = file.name
+				let promise = new Promise((resolve, reject) => {
+
+					var reader = new FileReader();
+					var vm = this;
+					reader.onload = e => {
+						resolve((vm.fileinput = reader.result));
+					}
+					reader.readAsText(file);
+				})
+
+				promise.then(
+					result => {
+						this.parseFile(this.fileinput)
+					},
+					error => {
+						/* handle an error */ 
+						console.log(error);
+					}
+				)
+			},
+			parseFile(csv) {
+
+				var file = csv.split('\n')
+				var table = []
+				var header = file[0].split(';')
+				// console.log(header)
+
+				for(var i = 1; i < file.length; i++) {
+
+					var obj = {};
+					var currentline = file[i].split(";")
+
+					for(var j = 0; j < header.length; j++) {
+						obj[header[j]] = currentline[j]
+					}
+					table.push(obj)
+				}
+				table.splice(0,2)
+				// console.table(table)
+				this.processTable(table)
+			},
+			processTable(table) {
+				var tableTirage = []
+				_.forEach(table, function(line) {
+					// debugger
+					if ( line['Tarif'] != undefined ) {
+						var nbTicket = line['Tarif'].replace(/[^0-9\.]+/g, '')
+						nbTicket = parseInt(nbTicket, 10)
+						var ticketSplitted = line['Url billet'].split('ag=')
+						var ticketID = ticketSplitted[1]
+						var i = 0
+						do {
+							i = i + 1
+							var newLine = {'ticketID': ticketID + '-' + i, 'out': false }
+							tableTirage.push(newLine)
+						} while (i < nbTicket)
+					}
+				})
+				console.table(tableTirage)
+			},
+			tirage() {
+
+			}
+		}
+	})
+</script>
 </html>
