--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<title>Chance Weasel</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="ext/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/style.css">
-	<title>Chance Weasel</title>
+	<script src="cw.js"></script>
+	<script src="ext/vue.js"></script>
+	<script src="ext/jquery-3.5.1.min.js"></script>
+	<script src="ext/lodash.js"></script>
+	<script src="ext/popper.min.js"></script>
+	<script src="ext/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -14,36 +20,50 @@
 	</header>
 	<div id="cw">
 		<div class="container-fluid upload-container">
-			<div class="input-group mb-3">
+			<div class="input-group input-group-sm mb-3">
 				<div class="input-group-prepend">
-					<span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
+					<span class="input-group-text" id="inputGroupFile1">Chargement des participants</span>
 				</div>
 				<div class="custom-file">
-					<input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01" @change="onFileChange">
-					<label class="custom-file-label" for="inputGroupFile01">{{fileInput}}</label>
+					<input type="file" class="custom-file-input" id="participantsFile" aria-describedby="inputGroupFileAddon01" @change="onFileUpload">
+					<label class="custom-file-label" for="participantsFile">{{fileInput}}</label>
 				</div>
 			</div>
-			<button type="button" class="btn btn-primary" v-on:click="tirage()">Tirage</button>
+			<div>
+				<span>Nb de lignes du fichier: </span><span>{{nbLinesFile}}</span>
+				<button type="button" class="btn btn-primary btn-sm" :disabled="nbLinesFile == 0" v-on:click="createTicketTable()">Création du fichier des tickets</button>
+			</div>
+			<div>
+				<span>Nb de tickets créés: </span><span>{{nbTickets}}</span>
+				<button type="button" class="btn btn-success btn-sm" :disabled="nbTickets == 0" v-on:click="exportToCSV()">Export du fichier des tickets</button>
+				<button type="button" class="btn btn-danger btn-sm" :disabled="nbTickets == 0" v-on:click="tirage()">Tirage</button>
+			</div>
+			<div class="input-group input-group-sm mb-3">
+				<div class="input-group-prepend">
+					<span class="input-group-text" id="inputGroupFile2">Chargement des lots</span>
+				</div>
+				<div class="custom-file">
+					<input type="file" class="custom-file-input" id="lotsFile" aria-describedby="inputGroupFile2" @change="onFileChange">
+					<label class="custom-file-label" for="lotsFile">{{fileInput}}</label>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
-
-<!-- <style>
-	.header {
-		background-color: #e30b5d;
-		color: whitesmoke;
-	}
-</style> -->
-<script src="cw.js"></script>
+<!-- <script src="cw.js"></script>
 <script src="ext/vue.js"></script>
 <script src="ext/jquery-3.5.1.min.js"></script>
 <script src="ext/lodash.js"></script>
 <script src="ext/popper.min.js"></script>
-<script src="ext/bootstrap.min.js"></script>
+<script src="ext/bootstrap.min.js"></script> -->
 <script>
 	var cw = new Vue({
 		el: '#cw',
 		data: {
+			nbLinesFile: 0,
+			nbTickets: 0,
+			csvTable: [],
+			ticketTable: [],
 			finalTable: [],
 			fileInput: 'Choose file',
 			message: 'Chance Weasel'
@@ -52,12 +72,14 @@
 
 		},
 		methods: {
-			onFileChange(event) {
-
+			onFileUpload(event) {
+				console.log(event)
+				debugger
 				var files = event.target.files || event.dataTransfer.files
-				if (!files.length)
-					return
-				this.createInput(files[0])
+				if (!files.length) return
+				if ( event.currentTarget.id == "participantsFile" ) this.createInput(files[0])
+				if ( event.currentTarget.id == "lotsFile" ) this.createInput(files[0])
+
 			},
 			createInput(file) {
 				// console.log(file)
@@ -100,12 +122,15 @@
 					table.push(obj)
 				}
 				table.splice(0,2)
+				this.nbLinesFile = table.length
+				this.csvTable = table
 				// console.table(table)
-				this.processTable(table)
+				// this.processTable(table)
 			},
-			processTable(table) {
+			createTicketTable() {
 				var tableTirage = []
-				_.forEach(table, function(line) {
+				// debugger
+				_.forEach(this.csvTable, function(line) {
 					// debugger
 					if ( line['Tarif'] != undefined ) {
 						var nbTicket = line['Tarif'].replace(/[^0-9\.]+/g, '')
@@ -121,7 +146,9 @@
 						} while (i < nbTicket)
 					}
 				})
-				console.table(tableTirage)
+				debugger
+				this.ticketTable = tableTirage
+				this.nbTickets = tableTirage.length
 			},
 			tirage() {
 				
